[package]
name = "hello-bevy"
description = "My first attempt at using Bevy in a WASM project."
version = "0.1.0"
authors = ["Jed Pommert <kneelawk@gmail.com>"]
categories = ["wasm", "bevy"]
readme = "README.md"
edition = "2018"
resolver = "2"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "hello-bevy"
path = "src/main.rs"

[profile.release]
# This makes the compiled code faster and smaller, but it makes compiling slower,
# so it's only enabled in release mode.
lto = true

[features]
#default = ["wee_alloc"]
panic_hook = ["console_error_panic_hook"]

[dependencies]
# The `wasm-bindgen` crate provides the bare minimum functionality needed
# to interact with JavaScript.
wasm-bindgen = "0.2.45"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so it's only enabled
# with a feature.
console_error_panic_hook = { version = "0.1.5", optional = true }

log = "^0.4.14"

# The `web-sys` crate allows you to interact with the various browser APIs,
# like the DOM.
[dependencies.web-sys]
version = "0.3.22"
features = ["console"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-logger = "^0.2.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dotenv = "^0.15.0"
env_logger = "^0.9.0"

# These crates are used for running unit tests.
[dev-dependencies]
wasm-bindgen-test = "0.2.45"
futures = "0.1.27"
js-sys = "0.3.22"
wasm-bindgen-futures = "0.3.22"
